--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
                     <input type="text" placeholder="City">
                     <button>Search</button>
                 </div>
+                <div class="deletelater">
+                    hahahahhhahhaha
+                </div>
                 <div class="location">
                     <img src="/assets/map-marker.png" alt="location">
                     <span>Walewale, </span>
